RESOLVED FIXED84361
It should be possible to load from Float64 arrays on ARMv7 without crashing
https://bugs.webkit.org/show_bug.cgi?id=84361
Summary It should be possible to load from Float64 arrays on ARMv7 without crashing
Filip Pizlo
Reported 2012-04-19 11:13:02 PDT
Patch forthcoming.
Attachments
the patch (1.89 KB, patch)
2012-04-19 11:14 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-04-19 11:14:24 PDT
Created attachment 137927 [details] the patch
Filip Pizlo
Comment 2 2012-04-19 11:44:23 PDT
Note You need to log in before you can comment on or make changes to this bug.